        using the new channel and job features.
      - 7.4.1384 et.al.: Provide native support for managing Vim
        addons/packages with the :packadd command and 'packpath' option.
      - 7.4.1402: GTK3 GUI support
      - 7.4.1578: Support running a function on a periodic basis with the
        timer_start()/timer_start() functions.

 -- James McCoy <jamessan@debian.org>  Mon, 28 Mar 2016 21:14:49 -0400

vim (2:7.4.963-1) unstable; urgency=medium

  * Merge upstream tag v7.4.963.
    + Remove merged patches:
      - Typo in Spanish translation of swapfile recovery.
    + Highlighted changes:
      - 7.4.849: New Insert mode command to maintain the undo sequence across
        cursor movements (c.f., :help i_CTRL-G_U).
      - 7.4.858: New quickfix-related commands (:ldo, :lfdo, :cdo, and :cfdo).
      - indent/yaml.vim: Maintain indent of mapping key when mapping is
        contained in a list.  (Closes: #713066)
      - 7.4.941: New 'tagcase' option to control whether tag searches are case
        insensitive.
  * Rewrite vim-tiny's help.txt.
    + Clarify the reasoning for the package and why the help isn't available.
    + Explicitly mention what the more featureful Vim packages are.
    + Point to vimhelp.appspot.com for online help, since it is better kept
      updated.
  * Update Vcs-* URLs to point to Git.
  * Install upstream's patchlist as the changelog.  (Closes: #622827)
  * Fix a typo in vim-policy.  Thanks to Jakuyo Friel for the patch.  (Closes:
    #773531)
  * Fix FTBFS when running “dpkg-buildpackage -A”.  (Closes: #806875)
  * Stop installing menu files.
  * Install upstream's desktop files and drop the ones from debian/.
  * Mark vim-runtime/vim-gui-common as Multi-Arch: foreign.  (Closes: #806535)

 -- James McCoy <jamessan@debian.org>  Wed, 09 Dec 2015 23:31:36 -0500

vim (2:7.4.826-1) unstable; urgency=medium

  * Merge upstream tag v7-4-826. Remove merged patches.