@@ -20,7 +20,7 @@ remove_variant_alternative () {
     update-alternatives --remove $i /usr/bin/vim.$variant
   done
   case "$variant" in
-    gtk|athena|gnome) # gui enabled variants
+    gtk|gtk3|athena|gnome) # gui enabled variants
       remove_gui_variant_alternative
       ;;
   esac
